Update window function planning (#166)
* Update window function plan

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* Add unit test for truncate

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* Tentative fix for truncate

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

* Update DSL tests

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>

---------

Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>